--- a/desafios/modulo-02/d012 Eraldo/style.css
+++ b/desafios/modulo-02/d012 Eraldo/style.css
@@ -1,1 +1,49 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@font-face {
+    font-family: 'poesia';
+    src: url(fontes/BebasNeue-Regular.otf) format(opentype), url(fontes/BebasNeue-Regular.ttf) format(truetype);
+    font-weight: normal;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+:root {
+    --fonte-padrao: Arial, Verdana, sans-serif;
+    --fonte-titulo: 'Passion One', sans-serif;
+    --fonte-poesia: 'poesia', sans-serif;
+}
+
+body {
+    background-color: white;
+}
+
+header {
+    background-color: black;
+    text-align: center;
+    min-height: 150px;
+    padding: 30px;
+}
+
+header  h1 {
+    color: white;
+    font-family: var(--fonte-titulo);
+    padding-top: 30px;
+    font-size: 150px;
+}
+
+header nav {
+    color: white;
+    font-family: var(--fonte-padrao);
+}
+
+header a {
+    font-family: var(--fonte-titulo);
+    color: white;
+    text-decoration: none;
+}
