--- a/desafios/modulo-02/d012 Eraldo/style.css
+++ b/desafios/modulo-02/d012 Eraldo/style.css
@@ -35,6 +35,7 @@ header  h1 {
     font-family: var(--fonte-titulo);
     padding-top: 30px;
     font-size: 150px;
+    text-transform: uppercase;
 }
 
 header nav {
