--- a/desafios/modulo-02/d012 Eraldo/style.css
+++ b/desafios/modulo-02/d012 Eraldo/style.css
@@ -55,6 +55,14 @@ nav > a:hover {
     text-decoration: underline;
 }
 
-main {
-    
+#container {
+    background-image: url('imagens/background001.jpg');
+    background-attachment: fixed;
+    background-position: left top;
+}
+
+#conteudo {
+    background-image: url('imagens/background002.jpg');
+    background-attachment: fixed;
+    background-position: right bottom;
 }
