--- a/exercicios/ex026/mq004/estilos/style.css
+++ b/exercicios/ex026/mq004/estilos/style.css
@@ -4,7 +4,6 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5em;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -22,7 +21,7 @@ body {
 
 main {
     background-color: rgba(255, 255, 255, 0.692);
-    width: 80vw;
+    width: 400px;
     margin: auto;
     margin-top: 20px;
     border-radius: 10px;
@@ -32,7 +31,7 @@ main {
 h1 {
     text-align: center;
     color: white;
-    box-shadow:3px 3px 0px rgba(0, 0, 0, 0.438);
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.438);
     font-size: 2em;
 }
 
