--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -14,13 +14,27 @@ header {
     background-color: rgb(158, 158, 158);
 }
 
-h1 {
+header > h1 {
     padding: 10px;
     text-align: center;
 }
 
-menu {
+#burguer {
+    background-color: rgb(44, 44, 44);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
