--- a/exercicios/ex027/flex013 - Menu FlexBox/estilos/style.css
+++ b/exercicios/ex027/flex013 - Menu FlexBox/estilos/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
-    background-color: lightgrey; 
+    background: lightgray url("../imagens/Fundo-de-tela-para-reuniões_1920x1080px_05.png");
     height: 100vh;
     width: 100vw;
 }
@@ -18,7 +18,6 @@ header {
     background-color: grey;
     color: white;
     padding: 10px;
-
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -26,13 +25,10 @@ header {
 }
 
 header > h1 {
-    border: 1px solid black;
     flex: 0 0 200px;
 }
 
 header > nav {
-    border: 1px dotted black;
-    
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-end;
@@ -56,22 +52,28 @@ header > nav > a:hover {
 
 main {
     background-color: white;
-    margin: 10px;
-    padding: 10px;
+    display: flex;
+    margin: 15px;
     border-radius: 10px;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.356);
-    width: 70vw;
-    justify-self: center;
-    
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.356);
 }
 
-main > h2 {
+div > h2 {
     text-align: center;
-    font-weight: ;
+    padding: 10px;
 }
 
-main > p {
+div > p {
     padding: 10px;
     text-align: justify;
     text-indent: 20px;
+}
+
+div#cx1 {
+    background-color: rgba(4, 151, 4, 0.288);
+}
+
+div#cx2 {
+    flex: 0 1 auto;
+    flex-flow: column nowrap;
 }
